Changes for Booking cargo summary fix