@@ -433,23 +433,24 @@ public class CustomerBookingV3Service implements ICustomerBookingV3Service {
         Optional<CustomerBooking> optionalCustomerBooking = customerBookingDao.findById(bookingId);
         if(optionalCustomerBooking.isPresent()) {
             CustomerBooking customerBooking = optionalCustomerBooking.get();
-            List<Packing> packingList = packingDao.findByBookingIdIn(List.of(bookingId));
-            List<Containers> containersList = containerDao.findByBookingIdIn(List.of(bookingId));
-            if(packingList.isEmpty()) {
-                resetPackageCargoSummary(customerBooking);
-                if(!containersList.isEmpty()) {
-                    updateContainerInfoInBooking(bookingId);
-                }
-            } else {
-                calculateCargoDetails(packingList, containersList, customerBooking, shipmentSettingsDetails);
-                calculateVW(customerBooking, null);
+            List<Packing> packings = packingDao.findByBookingIdIn(List.of(bookingId));
+            List<Containers> containers = containerDao.findByBookingIdIn(List.of(bookingId));
+            if(packings.isEmpty() && containers.isEmpty()) {
+                resetCargoSummary(customerBooking);
             }
-            customerBooking.setPackingList(packingList);
+            updatePackagesInBookingCargoSummary(containers, packings, customerBooking);
+            updateWeightInBookingCargoSummary(containers, packings, customerBooking, shipmentSettingsDetails);
+            updateVolumeInBookingCargoSummary(packings, customerBooking);
+            calculateVW(customerBooking, null);
+            customerBooking.setPackingList(packings);
+            customerBooking.setContainersList(containers);
             customerBookingDao.save(customerBooking);
         }
     }
 
-    private void resetPackageCargoSummary(CustomerBooking customerBooking) {
+    private void resetCargoSummary(CustomerBooking customerBooking) {
+        customerBooking.setContainers(null);
+        customerBooking.setTeuCount(null);
         customerBooking.setPackages(null);
         customerBooking.setPackageType(null);
         customerBooking.setGrossWeight(null);
@@ -461,35 +462,21 @@ public class CustomerBookingV3Service implements ICustomerBookingV3Service {
     @Override
     public void updateContainerInfoInBooking(Long bookingId) throws RunnerException {
         ShipmentSettingsDetails shipmentSettingsDetails = commonUtils.getShipmentSettingFromContext();
-        String weightUnit = consolidationService.determineWeightChargeableUnit(shipmentSettingsDetails);
         Optional<CustomerBooking> optionalBooking = customerBookingDao.findById(bookingId);
         if(optionalBooking.isPresent()) {
             CustomerBooking customerBooking = optionalBooking.get();
             Map<String, BigDecimal> containerTeuMap = getCodeTeuMapping();
-            List<Containers> containersList = containerDao.findByBookingIdIn(List.of(customerBooking.getId()));
-            Long containerCount = containersList.stream().mapToLong(c -> c.getContainerCount() != null ? c.getContainerCount() : 0).sum();
-            BigDecimal teuCount = containersList.stream()
-                    .map(c -> containerTeuMap.getOrDefault(c.getContainerCode(), BigDecimal.ZERO)
-                            .multiply(BigDecimal.valueOf(Optional.ofNullable(c.getContainerCount()).orElse(0L))))
-                    .reduce(BigDecimal.ZERO, BigDecimal::add)
-                    .setScale(1, RoundingMode.UNNECESSARY);
-            customerBooking.setContainers(containerCount);
-            customerBooking.setTeuCount(teuCount);
-            customerBooking.setContainersList(containersList);
-            List<Packing> packingList = packingDao.findByBookingIdIn(List.of(bookingId));
-            boolean ifAnyPackMissedWeight = false;
-            if(packingList.isEmpty()) {
-                customerBooking.setPackages(getTotalContainerPackages(containersList));
-                for(Packing pack: packingList) {
-                    if(Objects.isNull(pack.getCargoWeightPerPack())) {
-                        ifAnyPackMissedWeight = true;
-                        break;
-                    }
-                }
+            List<Containers> containers = containerDao.findByBookingIdIn(List.of(customerBooking.getId()));
+            List<Packing> packings = packingDao.findByBookingIdIn(List.of(bookingId));
+            if(packings.isEmpty() && containers.isEmpty()) {
+                resetCargoSummary(customerBooking);
             }
-            if(ifAnyPackMissedWeight) {
-                customerBooking.setGrossWeight(getTotalCargoWeight(containersList, weightUnit));
-            }
+            updateContainersAndTeuInBooking(containers, containerTeuMap, customerBooking);
+            updatePackagesInBookingCargoSummary(containers, packings, customerBooking);
+            updateWeightInBookingCargoSummary(containers, packings, customerBooking, shipmentSettingsDetails);
+            calculateVW(customerBooking, null);
+            customerBooking.setPackingList(packings);
+            customerBooking.setContainersList(containers);
             customerBookingDao.save(customerBooking);
         }
     }
@@ -2381,35 +2368,129 @@ public class CustomerBookingV3Service implements ICustomerBookingV3Service {
             containers = containerDao.findByBookingIdIn(List.of(booking.getId()));
             packings = packingDao.findByBookingIdIn(List.of(booking.getId()));
         }
-        booking.setContainers(null);
-        booking.setTeuCount(null);
-        if(!containers.isEmpty()) {
-            updateContainerInBooking(containers, codeTeuMap, booking, shipmentSettingsDetails);
+        if (containers.isEmpty() && packings.isEmpty()) {
+            customerBookingDao.save(booking);
+            return;
         }
-        if(!packings.isEmpty()) {
-            calculateCargoDetails(packings, containers, booking, shipmentSettingsDetails);
-            calculateVW(booking, oldBooking);
+        if(containers.isEmpty()) {
+            booking.setContainers(null);
+            booking.setTeuCount(null);
         }
+        else {
+            updateContainersAndTeuInBooking(containers, codeTeuMap, booking);
+        }
+        updatePackagesInBookingCargoSummary(containers, packings, booking);
+        updateWeightInBookingCargoSummary(containers, packings, booking, shipmentSettingsDetails);
+        updateVolumeInBookingCargoSummary(packings, booking);
+        calculateVW(booking, oldBooking);
         customerBookingDao.save(booking);
     }
 
-    private void updateContainerInBooking(List<Containers> containersList, Map<String, BigDecimal> codeTeuMap, CustomerBooking customerBooking, ShipmentSettingsDetails shipmentSettingsDetails) throws RunnerException {
-        List<String> weightUnits = containersList.stream()
-                                        .map(Containers::getContainerWeightUnit)
-                                        .filter(Objects::nonNull)
-                                        .collect(Collectors.toList());
-        String weightUnit = resolveUnit(weightUnits, consolidationService.determineWeightChargeableUnit(shipmentSettingsDetails));
-        Set<String> distinctContainerPackTypes = new HashSet<>();
+    private void updateVolumeInBookingCargoSummary(List<Packing> packingList, CustomerBooking booking) throws RunnerException {
+        BigDecimal totalVolume = BigDecimal.ZERO;
+        List<String> volumeUnits = packingList.stream()
+                .map(Packing::getVolumeUnit)
+                .filter(Objects::nonNull)
+                .toList();
+        String volumeUnit = resolveUnit(volumeUnits, VOLUME_UNIT_M3);
+        booking.setVolumeUnit(volumeUnit);
+        if(!packingList.isEmpty()) {
+            for (Packing packing : packingList) {
+                totalVolume = addVolume(packing, totalVolume, volumeUnit);
+            }
+            booking.setVolume(totalVolume);
+        }
+    }
+
+    private void updatePackagesInBookingCargoSummary(List<Containers> containersList, List<Packing> packingList, CustomerBooking booking) {
+        List<String> containerPackUnits = containersList.stream()
+                .map(Containers::getContainerPackageType)
+                .filter(Objects::nonNull)
+                .toList();
+        String containerPackType = resolveUnit(containerPackUnits, PackingConstants.PKG);
+
+        List<String> packagePackUnits = packingList.stream()
+                .map(Packing::getPacksType)
+                .filter(Objects::nonNull)
+                .toList();
+        String packagePackType = resolveUnit(packagePackUnits, PackingConstants.PKG);
+
+        if(!packingList.isEmpty()) {
+            Long totalPacks = 0L;
+            for(Packing packing: packingList) {
+                if (!isStringNullOrEmpty(packing.getPacks())) {
+                    totalPacks += Long.parseLong(packing.getPacks());
+                }
+            }
+            booking.setPackages(totalPacks);
+            booking.setPackageType(packagePackType);
+        } else if (!containersList.isEmpty()){
+            Long totalPacks = getTotalContainerPackages(containersList);
+            booking.setPackages(totalPacks);
+            booking.setPackageType(containerPackType);
+        }
+        booking.setPackingList(packingList);
+    }
+
+    private void updateWeightInBookingCargoSummary(List<Containers> containersList, List<Packing> packingList, CustomerBooking booking, ShipmentSettingsDetails shipmentSettingsDetails) throws RunnerException {
+        String defaultBranchWeightUnit = consolidationService.determineWeightChargeableUnit(shipmentSettingsDetails);
+        String containerWeightUnit = resolveUnit(
+                containersList.stream()
+                        .map(Containers::getContainerWeightUnit)
+                        .filter(Objects::nonNull)
+                        .toList(),
+                defaultBranchWeightUnit
+        );
+
+        String packingWeightUnit = resolveUnit(
+                packingList.stream()
+                        .map(Packing::getPackWeightUnit)
+                        .filter(Objects::nonNull)
+                        .toList(),
+                defaultBranchWeightUnit
+        );
+        booking.setGrossWeightUnit(defaultBranchWeightUnit);
+        if (!packingList.isEmpty()) {
+            boolean ifAnyPackMissedWeight = false;
+            for (Packing pack : packingList) {
+                if (pack.getCargoWeightPerPack() == null) {
+                    ifAnyPackMissedWeight = true;
+                    break;
+                }
+            }
+
+            if (!ifAnyPackMissedWeight) {
+                booking.setGrossWeight(getTotalCargoWeightFromPackages(packingList, packingWeightUnit));
+                booking.setGrossWeightUnit(packingWeightUnit);
+            } else if(!containersList.isEmpty()) {
+                booking.setGrossWeight(getTotalCargoWeight(containersList, containerWeightUnit));
+                booking.setGrossWeightUnit(containerWeightUnit);
+            }
+        } else if(!containersList.isEmpty()) {
+            booking.setGrossWeight(getTotalCargoWeight(containersList, containerWeightUnit));
+            booking.setGrossWeightUnit(containerWeightUnit);
+        }
+    }
+
+    private void updateContainersAndTeuInBooking(List<Containers> containersList, Map<String, BigDecimal> codeTeuMap, CustomerBooking booking) {
         for(Containers containers: containersList) {
             containers.setTeu(codeTeuMap.get(containers.getContainerCode()));
-            addDistinctContainersPackType(distinctContainerPackTypes, containers);
+            Long containerCount = containers.getContainerCount();
+            BigDecimal weightPerContainer = containers.getCargoWeightPerContainer();
+            BigDecimal containerWeight = BigDecimal.valueOf(containerCount != null ? containerCount : 0).multiply(weightPerContainer != null ? weightPerContainer : BigDecimal.ZERO);
+            if(Objects.isNull(containers.getGrossWeight())) {
+                containers.setGrossWeight(containerWeight);
+            }
+            containers.setGrossWeightUnit(containers.getContainerWeightUnit());
         }
-        customerBooking.setContainers(getTotalContainerCount(containersList));
-        customerBooking.setTeuCount(getTotalTeu(containersList, codeTeuMap));
-        customerBooking.setPackages(getTotalContainerPackages(containersList));
-        customerBooking.setPackageType(getPackUnit(distinctContainerPackTypes));
-        customerBooking.setGrossWeight(getTotalCargoWeight(containersList, weightUnit));
-        customerBooking.setGrossWeightUnit(weightUnit);
+        BigDecimal teuCount = containersList.stream()
+                .map(c -> codeTeuMap.getOrDefault(c.getContainerCode(), BigDecimal.ZERO)
+                        .multiply(BigDecimal.valueOf(Optional.ofNullable(c.getContainerCount()).orElse(0L))))
+                .reduce(BigDecimal.ZERO, BigDecimal::add)
+                .setScale(1, RoundingMode.UNNECESSARY);
+        booking.setTeuCount(teuCount);
+        booking.setContainers(getTotalContainerCount(containersList));
+        booking.setContainersList(containersList);
     }
 
     public BigDecimal getTotalCargoWeight(List<Containers> containersList, String weightUnit) throws RunnerException {
@@ -2418,6 +2499,18 @@ public class CustomerBookingV3Service implements ICustomerBookingV3Service {
             BigDecimal containerCount = container.getContainerCount() != null ? new BigDecimal(container.getContainerCount()) : BigDecimal.ZERO;
             BigDecimal weightPerContainer = container.getCargoWeightPerContainer() != null ? container.getCargoWeightPerContainer() : BigDecimal.ZERO;
             BigDecimal totalLineCargoWeight = new BigDecimal(convertUnit(MASS, containerCount.multiply(weightPerContainer), container.getGrossWeightUnit(), weightUnit).toString());
+
+            totalCargoWeight = totalCargoWeight.add(totalLineCargoWeight);
+        }
+        return totalCargoWeight;
+    }
+
+    public BigDecimal getTotalCargoWeightFromPackages(List<Packing> packingList, String weightUnit) throws RunnerException {
+        BigDecimal totalCargoWeight = BigDecimal.ZERO;
+        for (Packing packing : packingList) {
+            BigDecimal packingCount = packing.getPacks() != null ? new BigDecimal(packing.getPacks()) : BigDecimal.ZERO;
+            BigDecimal weightPerPack = packing.getCargoWeightPerPack() != null ? packing.getCargoWeightPerPack() : BigDecimal.ZERO;
+            BigDecimal totalLineCargoWeight = new BigDecimal(convertUnit(MASS, packingCount.multiply(weightPerPack), packing.getPackWeightUnit(), weightUnit).toString());
 
             totalCargoWeight = totalCargoWeight.add(totalLineCargoWeight);
         }
@@ -2468,78 +2561,12 @@ public class CustomerBookingV3Service implements ICustomerBookingV3Service {
                 .setScale(1, RoundingMode.UNNECESSARY);
     }
 
-    public void calculateCargoDetails(List<Packing> packings, List<Containers> containers , CustomerBooking customerBooking, ShipmentSettingsDetails shipmentSettingsDetails) throws RunnerException {
-        List<String> weightUnits = packings.stream()
-                                    .map(Packing::getWeightUnit)
-                                    .filter(Objects::nonNull)
-                                    .collect(Collectors.toList());
-        List<String> volumeUnits = packings.stream()
-                                    .map(Packing::getVolumeUnit)
-                                    .filter(Objects::nonNull)
-                                    .collect(Collectors.toList());
-        String weightUnit = resolveUnit(weightUnits, consolidationService.determineWeightChargeableUnit(shipmentSettingsDetails));
-        String volumeUnit = resolveUnit(volumeUnits, VOLUME_UNIT_M3);
-        BigDecimal weightFromContainers = getTotalCargoWeight(containers, weightUnit);
-        boolean packWeightMissing = getIsPackWeightMissing(packings);
-        BigDecimal totalWeight = BigDecimal.ZERO;
-        BigDecimal totalVolume = BigDecimal.ZERO;
-        int totalPacks = 0;
-        Set<String> distinctPackTypes = new HashSet<>();
-        boolean stopWeightCalculation = false;
-        boolean isAirTransport = TRANSPORT_MODE_AIR.equals(customerBooking.getTransportType());
-        customerBooking.setGrossWeightUnit(weightUnit);
-        customerBooking.setVolumeUnit(volumeUnit);
-        for (Packing packing : packings) {
-            totalVolume = addVolume(packing, totalVolume, volumeUnit);
-            if (!isStringNullOrEmpty(packing.getPacks())) {
-                totalPacks += Integer.parseInt(packing.getPacks());
-            }
-            addDistinctPackType(distinctPackTypes, packing);
-            if (!stopWeightCalculation) {
-                boolean hasWeight = hasWeightInfo(packing);
-                if (isAirTransport && !hasWeight) {
-                    stopWeightCalculation = true;
-                    continue;
-                }
-                BigDecimal weight = new BigDecimal(convertUnit(MASS, packing.getWeight(), packing.getWeightUnit(), weightUnit).toString());
-                totalWeight = totalWeight.add(weight);
-            }
-        }
-        if(!packWeightMissing) {
-            customerBooking.setGrossWeight(totalWeight);
-        } else if(BigDecimal.ZERO.compareTo(weightFromContainers) != 0) {
-            customerBooking.setGrossWeight(weightFromContainers);
-        }
-        customerBooking.setVolume(totalVolume);
-        customerBooking.setPackages((long) totalPacks);
-        customerBooking.setPackageType(getPackUnit(distinctPackTypes));
-    }
-
     private BigDecimal addVolume(Packing p, BigDecimal totalVolume, String volumeUnit) throws RunnerException {
         if (p.getVolume() != null && !isStringNullOrEmpty(p.getVolumeUnit())) {
             BigDecimal converted = new BigDecimal(convertUnit(VOLUME, p.getVolume(), p.getVolumeUnit(), volumeUnit).toString());
             return totalVolume.add(converted);
         }
         return totalVolume;
-    }
-
-    private boolean hasWeightInfo(Packing packing) {
-        return packing.getWeight() != null && !isStringNullOrEmpty(packing.getWeightUnit());
-    }
-
-    private boolean getIsPackWeightMissing(List<Packing> packings) {
-        for(Packing packing : packings) {
-            if(!hasWeightInfo(packing)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private void addDistinctPackType(Set<String> distinctPackTypes, Packing packing) {
-        if (!isStringNullOrEmpty(packing.getPacksType())) {
-            distinctPackTypes.add(packing.getPacksType());
-        }
     }
 
     private void addDistinctContainersPackType(Set<String> distinctContainerPackTypes, Containers containers) {
